# TOML: Tom's Obvious Minimal Language -> Cargo的配置格式
# 区域标题，以下为配置内容
[package]
name = "RustLearning"
version = "0.1.0"
authors = ["Zhaoyi Wang"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# 项目的依赖项
[dependencies]
# 引用的代码包叫做'create'
